Fixed a layout issue for IE11

--- a/src/Pages/CasePage/style.css
+++ b/src/Pages/CasePage/style.css
@@ -16,7 +16,7 @@
   width: 75%;
 }
 
-.tech {
+.tech-container {
   position: relative;
 }
 
